# openqa-mcp

./: AGENTS.md  README.md  main.py  pyproject.toml
.beads/: config.yaml  issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/openqa_mcp/: __main__.py  client.py  server.py
tests/: test_cli.py  test_client.py  test_tools.py
