[project]
name = "openqa-mcp"
version = "0.5.0"
description = "Local openQA mcp client"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "fastmcp>=3.4.3",
    "openqa-async>=0.1.0",
]

[project.scripts]
openqa-mcp = "openqa_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "httpx",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
